Refactor: Reorganize "1. Two Sum" project structure
The "1. Two Sum" project has been moved to the `Easy\1. Two Sum`
directory. The project file (`0001. Two Sum.csproj`), solution
file (`LeetCode.sln`), and test project (`Test.csproj`) have been
updated to reflect the new structure. The `README.md` and `code.cs`
files for "1. Two Sum" have been re-added with the same content.
This reorganization maintains existing functionality while
improving project structure.

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\1. Two Sum\0001. Two Sum.csproj" />
+    <ProjectReference Include="..\Easy\1. Two Sum\0001. Two Sum.csproj" />
     <ProjectReference Include="..\Easy\1431. Kids With the Greatest Number of Candies\1431. Kids With the Greatest Number of Candies.csproj" />
     <ProjectReference Include="..\Easy\1480. Running Sum of 1d Array\1480. Running Sum of 1d Array.csproj" />
     <ProjectReference Include="..\Easy\217. Contains Duplicate\0217. Contains Duplicate.csproj" />
